--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,17 @@ Thumbs.db
 
 # IDE files #
 .idea/
+# VS Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+# Local History for Visual Studio Code
+.history/
+# Built Visual Studio Code Extensions
+*.vsix
 
 ### Node template
 # Logs
